Fix unused lambda capture warnings of this https://bugs.webkit.org/show_bug.cgi?id=247473

Reviewed by Ross Kirsling.

* Source/WebKit/NetworkProcess/ServiceWorker/WebSWServerConnection.cpp:
* Source/WebKit/UIProcess/WebProcessProxy.cpp:
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:

Canonical link: https://commits.webkit.org/257157@main